Fix button width on tablets

--- a/sass/components/_links.scss
+++ b/sass/components/_links.scss
@@ -43,6 +43,7 @@
 /* TABLETS */
 @media screen and (min-width: 768px) {
   .link {
+    width: 260px;
     font-size: 19px;
   }
 }
@@ -50,8 +51,6 @@
 /* DESKTOP */
 @media screen and (min-width: 992px) {
   .link {
-    font-size: large;
     font-weight: 400;
-    width: 260px;
   }
 }
